2005-06-30  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nsd/conn.c: fixed Bug #1230179 which caused the server crash
	when calling ns_startcontent outside of the connection scope.

2005-06-29  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/fastpath.c: Made all tests pass successfully. Changed parser
	to support multiple ranges. ParseRange returns list of all parsed ranges
	but FastReturn uses only the first one. to return mutiple chunks
	FastReturn should be changed.

2005-06-29  Stephen Deasey  <sdeasey@users.sf.net>

	* tests/http_byteranges.test: Use the 'knownBug' test contraint to
	dissable multiple-range tests so that they are counted in the 'Skipped'
	column of the test results and are not forgottena about. Added a new,
	temporary test for multiple ranges to ensure that multiple-range
	requests are ignored, not half fulfilled.  Re-added test 2.3 which
	tests multiple, overlapping ranges (non canonical in RFC speak);
	dissabled as a 'knownBug'.  Reverted tests 3.1 and 3.2 which check
	syntactically invalid requests are ignored by the server.  An end
	byte before the start byte is never going to work and so is a
	syntactic error, not an unsatisfiable request.  Renamed tests
	byteranges- from http-.

2005-06-29  Vlad Seryakov  <seryakov@users.sf.net>

	* tests/http_byteranges.test: Disabled mutiple ranges
	test. This can be supported in the future.

2005-06-28  Vlad Seryakov  <seryakov@users.sf.net>

	* tests/http_byteranges.test: Updated to reflect
	actual range support. Multiple ranges are not supported.

	* nsd/fastpath.c: improved detection of invalid syntax

	* ns/include:
	 nsd/return.c: removed unsed NsConnPrintfHeader. Renamed
	 Ns_ConnVSetHeaders into Ns_ConnPrintfHeaders.
	

2005-06-28  Stephen Deasey  <sdeasey@users.sf.net>

	* tests/http_byteranges.test: Test HTTP byte ranges.

2005-06-28  Vlad Seryakov  <seryakov@users.sf.net>

	* include/ns.h:
	* nsd/return.c: Added Ns_ConnVSetHeaders function to add